# VideoGen

./: CMakeLists.txt  README.md
py/: genTxt.py  readme.md
samples/: README.md  test.sh
samples/wy/: std.json
src/: CMakeLists.txt  global_conf.h  main.cpp  main2.cpp  motion.cpp  motion.hpp  readme.md  resource.cpp  resource.hpp  tools.cpp  tools.hpp  transform.cpp  transform.hpp  videoGenerator.cpp  videoGenerator.hpp
src/json/: autolink.h  config.h  features.h  forwards.h  json.h  json_batchallocator.h  json_reader.cpp  reader.h  value.h  writer.h
